--- a/Mockup/Mockup.CSharp.csproj
+++ b/Mockup/Mockup.CSharp.csproj
@@ -72,9 +72,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\LightHit.cs" />
     <Compile Include="Assets\_Models\LowPolyBushVinesPackage\Standard Assets\Character Controllers\Sources\Scripts\MouseLook.cs" />
+    <Compile Include="Assets\_Scripts\AICharacterControl.cs" />
     <Compile Include="Assets\_Scripts\Flashlight.cs" />
+    <Compile Include="Assets\_Scripts\LightHit.cs" />
+    <Compile Include="Assets\_Scripts\RenderControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
