--- a/Mockup/Mockup.CSharp.csproj
+++ b/Mockup/Mockup.CSharp.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Assets\_Models\LowPolyBushVinesPackage\Standard Assets\Character Controllers\Sources\Scripts\MouseLook.cs" />
     <Compile Include="Assets\_Scripts\AICharacterControl.cs" />
+    <Compile Include="Assets\_Scripts\DestroyByTime.cs" />
     <Compile Include="Assets\_Scripts\Flashlight.cs" />
     <Compile Include="Assets\_Scripts\LightHit.cs" />
     <Compile Include="Assets\_Scripts\RenderControl.cs" />
