Added Battery Mechanic and Start of Sprint
Battery Power is now implemented.

--- a/Mockup/Mockup.CSharp.csproj
+++ b/Mockup/Mockup.CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\_Scripts\AICharacterControl.cs" />
     <Compile Include="Assets\_Scripts\DestroyByTime.cs" />
     <Compile Include="Assets\_Scripts\Flashlight.cs" />
+    <Compile Include="Assets\_Scripts\GameController.cs" />
     <Compile Include="Assets\_Scripts\LightHit.cs" />
     <Compile Include="Assets\_Scripts\RenderControl.cs" />
   </ItemGroup>
