Added Distance from Enemy Based Events
Being within certain range of enemy makes flashlight only able to click
on for a second. Adds to tension quite a bit I think. Also added death.

--- a/Mockup/Mockup.CSharp.csproj
+++ b/Mockup/Mockup.CSharp.csproj
@@ -77,7 +77,9 @@
     <Compile Include="Assets\_Scripts\DestroyByTime.cs" />
     <Compile Include="Assets\_Scripts\Flashlight.cs" />
     <Compile Include="Assets\_Scripts\GameController.cs" />
+    <Compile Include="Assets\_Scripts\HandHeldCam.cs" />
     <Compile Include="Assets\_Scripts\LightHit.cs" />
+    <Compile Include="Assets\_Scripts\LookatTarget.cs" />
     <Compile Include="Assets\_Scripts\RenderControl.cs" />
   </ItemGroup>
   <ItemGroup>
