sprint meter should work now
had to move the firstpersoncontroller script to the same folder as the
gamecontroller though, hopefully this doesn't cause problems

--- a/Mockup/Assembly-CSharp.csproj
+++ b/Mockup/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\_Models\LowPolyBushVinesPackage\Standard Assets\Character Controllers\Sources\Scripts\MouseLook.cs" />
      <Compile Include="Assets\_Scripts\AICharacterControl.cs" />
      <Compile Include="Assets\_Scripts\DestroyByTime.cs" />
+     <Compile Include="Assets\_Scripts\FirstPersonController.cs" />
      <Compile Include="Assets\_Scripts\Flashlight.cs" />
      <Compile Include="Assets\_Scripts\GameController.cs" />
      <Compile Include="Assets\_Scripts\HandHeldCam.cs" />
